--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ img {
 
 textarea,
 input {
-    background-color: none;
+    background-color: transparent;
     border: none;
     outline: none;
 }
@@ -127,7 +127,7 @@ input {
     margin-bottom: 1rem;
 }
 
-.section__title:not(.about .section__title),
+.section__title:not(.about .section__title, .contact .section__title ),
 .section__description {
     text-align: center;
 }
@@ -136,6 +136,24 @@ input {
     max-width: 600px;
     margin-inline: auto;
     margin-bottom: 3.75rem;
+}
+
+.btn {
+    display: inline-block;
+    color: var(--title-color);
+    background-color: var(--first-color);
+    border: 2px solid var(--first-color);
+    padding: 1rem 2.5rem;
+    border-radius: var(--radius);
+    font-size: var(--small-font-size);
+    letter-spacing: 2px;
+    cursor: pointer;
+    transition: all 0.3s var(--transition);
+}
+
+.btn:hover {
+    background-color: transparent;
+    color: var(--first-color);
 }
 
 /* ============== HEADER & NAV =============== */
@@ -175,6 +193,7 @@ input {
     border-radius: 50%;
     border: 0.75rem solid var(--container-color);
     margin-left: auto;
+    
 }
 
 /* ============== ABOUT =============== */
@@ -191,6 +210,8 @@ input {
 
 .about__img {
     border-radius: var(--radius);
+    border: 1px solid var(--border-color);
+    height: 100%;
 }
 
 .about__description {
@@ -359,6 +380,58 @@ input {
 
 
 /* ============== CONTACT =============== */
+.contact__container {
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    column-gap: 4rem;
+}
+
+.contact__description,
+.contact__input {
+    font-weight: var(--weight-400);
+}
+
+.contact__description {
+    margin-bottom: 3rem;
+}
+
+.contact__description a {
+    color: var(--title-color);
+    font-weight: var(--weight-500);
+}
+
+.contact__form {
+    position: relative;
+}
+
+.contact__input {
+    border: 2px solid var(--border-color);
+    padding: 0.8rem 1.25rem;
+    width: 100%;
+    border-radius: var(--radius);
+    font-size: var(--smaller-font-size);
+    margin-bottom: 1.25rem;
+}
+
+.textarea {
+    height: 120px;
+    resize: none;
+}
+
+.error__message {
+    position: absolute;
+    bottom: -12%;
+    left: 0;
+    font-size: var(--small-font-size);
+    font-weight: var(--weight-400);
+}
+
+.contact__img {
+    border-radius: var(--radius);
+    border: 1px solid var(--border-color);
+    height: 85%;
+    margin-left: auto;
+}
 /* ============== FOOTER =============== */
 /* ============== SCROLL UP =============== */
 /* Show scrollup */
