--- a/style.css
+++ b/style.css
@@ -437,7 +437,61 @@ input {
     color: var(--first-color);
 }
 /* ============== FOOTER =============== */
+.footer {
+    background-color: var(--container-color);
+    padding-block: 2rem;
+}
+
+.footer__container {
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+}
+
+.footer__logo {
+    color: var(--title-color);
+    font-size: 2.5rem;
+    font-weight: var(--weight-700);
+}
+
+.footer__logo span {
+    color: var(--first-color);
+}
+
+.footer__socials {
+    display: flex;
+    justify-content: center;
+    column-gap: 0.75rem;
+}
+
+.footer__socials-link {
+    color: var(--text-color);
+    font-size: var(--small-font-size);
+    border: 2px solid --text-color;
+    width: 46px;
+    height: 46px;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+    transition: all 0.3s var(--transition);
+}
+
+.footer__socials-link:hover {
+    background-color: var(--first-color);
+    border-color: var(--first-color);
+}
+
+.footer__copyright {
+    font-size: var(--small-font-size);
+    font-weight: var(--weight-400);
+    justify-self: flex-end;
+}
 /* ============== SCROLL UP =============== */
 /* Show scrollup */
-/* ============== SCROLL UP =============== */
-/* Show scrollup */
+/* ============== Break Points =============== */
+/* For large devices */
+@media screen and (max-width: 1200px){
+    
+}
+@media screen and (max-width: 992px){
+    
+}
