--- a/style.css
+++ b/style.css
@@ -589,7 +589,30 @@ input {
     justify-self: flex-end;
 }
 /* ============== SCROLL UP =============== */
+.scrollup {
+    position: fixed;
+    right: 1rem;
+    bottom: 3rem;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: var(--title-color);
+    display: grid;
+    place-items: center;
+    z-index: var(--z-fixed);
+    transition: all 0.4s var(--transition);
+}
+
+.scrollup__icon {
+    color: var(--first-color);
+    /* font-size: 2.25rem; */
+    line-height: 1;
+}
 /* Show scrollup */
+.show-scroll {
+    bottom: 3rem;
+}
+
 /* ============== Break Points =============== */
 /* For large devices */
 @media screen and (max-width: 1200px){
