--- a/style.css
+++ b/style.css
@@ -461,7 +461,7 @@ input {
 }
 
 .portfolio__description {
-    font-weight: var(--weight-400);
+    font-weight: 100;
     display: none;
 }
 /* Work hover */
@@ -592,7 +592,7 @@ input {
 .scrollup {
     position: fixed;
     right: 1rem;
-    bottom: 3rem;
+    bottom: -100%;
     width: 50px;
     height: 50px;
     border-radius: 50%;
