--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@
     --body-font: "Poppins", sans-serif;
     --second-font: "Montserrat", sans-serif;
 
-    --big-font-size: 4.5rem;
-    --h1-font-size: 3.75rem;
+    --big-font-size: clamp(2rem, 0.9706rem + 4.7059vw, 4.5rem);
+    --h1-font-size: clamp(1.75rem, 0.9265rem + 3.7647vw, 3.75rem);
     --h2-font-size: 1.75rem;
     --h3-font-size: 1.5rem;
     --normal-font-size: 1.125rem;
@@ -48,11 +48,13 @@
 /* Responsive typography */
 @media screen and (max-width: 992px) {
     :root {
-        --h2-font-size: ;
-        --h3-font-size: ;
-        --normal-font-size: ;
-        --small-font-size: ;
-        --smaller-font-size: ;
+        --header-height: 5rem;
+
+        --h2-font-size: 1.5rem;
+        --h3-font-size: 1.25rem;
+        --normal-font-size: 1rem;
+        --small-font-size: 0.9375rem;
+        --smaller-font-size: 0.813rem;
     }
 }
 
@@ -131,7 +133,7 @@ input {
     margin-bottom: 1rem;
 }
 
-.section__title:not(.about .section__title, .contact .section__title ),
+.section__title:not(.about .section__title, .contact .section__title),
 .section__description {
     text-align: center;
 }
@@ -225,9 +227,9 @@ input {
 }
 
 .nav__link-btn:hover {
- background-color: var(--first-color);
- border-color: var(--first-color);   
- color: var(--title-color);
+    background-color: var(--first-color);
+    border-color: var(--first-color);
+    color: var(--title-color);
 }
 
 .nav__toggle,
@@ -253,6 +255,7 @@ input {
     0% {
         transform: translateY(-100%);
     }
+
     100% {
         transform: translateY(0);
     }
@@ -296,7 +299,7 @@ input {
     border-radius: 50%;
     border: 0.75rem solid var(--container-color);
     margin-left: auto;
-    
+
 }
 
 /* ============== ABOUT =============== */
@@ -363,6 +366,7 @@ input {
 .tabs__btn.tab__active {
     color: var(--first-color);
 }
+
 .tabs__btn.tab__active::after {
     background-color: var(--first-color);
     width: 100%;
@@ -375,6 +379,7 @@ input {
 .tab__active[data-content] {
     display: block;
 }
+
 /* ============== SERVICES =============== */
 .services__container {
     grid-template-columns: repeat(3, 1fr);
@@ -401,6 +406,7 @@ input {
 .services__description {
     font-weight: var(--weight-400);
 }
+
 /* ============== WORK =============== */
 .portfolio {
     background-color: var(--container-color);
@@ -464,6 +470,7 @@ input {
     font-weight: 100;
     display: none;
 }
+
 /* Work hover */
 .portfolio__item:hover::after {
     opacity: 1;
@@ -539,6 +546,7 @@ input {
 .color-first {
     color: var(--first-color);
 }
+
 /* ============== FOOTER =============== */
 .footer {
     background-color: var(--container-color);
@@ -588,6 +596,7 @@ input {
     font-weight: var(--weight-400);
     justify-self: flex-end;
 }
+
 /* ============== SCROLL UP =============== */
 .scrollup {
     position: fixed;
@@ -608,6 +617,7 @@ input {
     /* font-size: 2.25rem; */
     line-height: 1;
 }
+
 /* Show scrollup */
 .show-scroll {
     bottom: 3rem;
@@ -615,9 +625,298 @@ input {
 
 /* ============== Break Points =============== */
 /* For large devices */
-@media screen and (max-width: 1200px){
+@media screen and (max-width: 1200px) {
+    .container {
+        max-width: 960px;
+    }
+    .nav__btns {
+        display: none;
+    }
+
+    .home {
+        padding-top: 11rem;
+    }
+
+    .home__container,
+    .about__container {
+        grid-template-columns: 1fr;
+    }
+
+    .home__container {
+        row-gap: 2rem;
+    }
+
+    .home__content {
+        order: 1;
+    }
+
+    .home__img,
+    .about__img {
+        margin-inline: auto;
+    }
+
+    .home__img {
+        border: 0.5rem solid var(--container-color);
+        width: 380px;
+        height: 380px;
+    }
+
+    .about__container {
+        row-gap: 2.5rem;
+    }
+    .about__img {
+        width: 550px;
+        height: 700px;
+    }
+
+    .services__container,
+    .portfolio__container {
+        grid-template-columns: repeat(2, 1fr);
+    }
     
+    .contact__container {
+        column-gap: 2rem;
+    }
 }
-@media screen and (max-width: 992px){
+
+@media screen and (max-width: 992px) {
+    .container {
+        max-width: 720px;
+    }
     
+    .nav {
+        height: var(--header-height);
+        column-gap: 2rem;
+    }
+
+    .nav__logo {
+        font-size: 2rem;
+    }
+
+    .nav__btns,
+    .nav__toggle,
+    .nav__close {
+        display: block;
+    }
+
+    .nav__link-btn {
+        display: none;
+    }
+
+    .nav__menu {
+        position: fixed;
+        top: 0;
+        right: -100%;
+        width: 60vw;
+        height: 100vh;
+        background-color: var(--container-color);
+        padding: 3.5rem;
+        transition: all 0.8s var(--transition);
+    }
+
+    .show-menu {
+        right: 0;
+    }
+
+    .nav__list {
+        flex-direction: column;
+        row-gap: 1.125rem;
+    }
+
+    .nav__close {
+        font-size: 1.5rem;
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
+    }
+
+    .nav__socials {
+        column-gap: 1rem;
+    }
+
+    .nav__toggle {
+        font-size: var(--h2-font-size);
+    }
+
+    .nav__close,
+    .nav__toggle {
+        cursor: pointer;
+    }
+
+    .home {
+        padding-top: 9rem;
+    }
+
+    .home__img {
+        width: 320px;
+        height: 320px;
+    }
+
+    .about {
+        padding-top: 7rem;
+    }
+
+    .about__img {
+        width: 400px;
+        height: 500px;
+    }
+
+    .services__icon {
+        font-size: 2.5rem;
+    }
+
+    .services__title {
+        margin-block: 1.5rem 1rem;
+    }
+
+    .contact__container {
+        grid-template-columns: 1fr;
+        row-gap: 2rem;
+    }
+    .contact__content {
+        order: 1;
+    }
+
+    .contact__description {
+        margin-bottom: 2rem;
+    }
+
+    /* .contact__img {
+        width: 400px;
+        height: 520px;
+        margin-right: auto;
+    } */
+
+    .footer__socials-link {
+        font-size: var(--smaller-font-size);
+        width: 36px;
+        height: 36px;
+    }
+
+    .footer__copyright {
+        font-size: .85rem;
+    }
+
+
+    .scrollup {
+        width: 42px;
+        height: 42px;
+    }
+
+    .scrollup__icon {
+        font-size: 2rem;
+    }
+
+    .scrollup__icon {
+        font-size: 1rem;
+    }
+
+}
+
+/* For medium devices */
+@media screen and (max-width: 768px) {
+    .container {
+         max-width: 540px;
+    }
+
+    .home__img {
+        width: 280px;
+        height: 280px;
+    }
+
+    .tabs__btns {
+        flex-wrap: wrap;
+        row-gap: 0.75rem;
+        column-gap: 1.5rem;
+    }
+
+    .services__container,
+    .portfolio__container,
+    .footer__container {
+        grid-template-columns: 1fr;
+    }
+
+    .footer__container {
+        row-gap: 1.5rem;
+        justify-items: center;
+    }
+
+    .footer__copyright {
+        justify-self: center;
+    }
+
+}
+@media screen and (max-width: 576px) {
+    .nav__menu {
+        width: 100vw;
+        padding: 2.75rem;
+    }
+
+    .home__img {
+        width: 260px;
+        height: 260px;
+    }
+
+    .services__item {
+        padding: 2rem 1.5rem;
+    }
+
+    /* .portfolio__item {
+        width: 450px;
+        height: 500px;
+        justify-self: center;
+    } */
+}
+/* For small devices */
+@media screen and (max-width: 350px) {
+    .container {
+        max-width: 340px;
+    }
+
+    .nav__logo {
+        font-size: 19px;
+    }
+
+    .nav__socials {
+        column-gap: 0.85rem;
+        margin-left: auto;
+    }
+
+    .home__img {
+        width: 240px;
+        height: 240px;    
+    }
+
+    .about {
+        padding-top: 4rem;
+    }
+    .about__img {
+        width: 300px;
+        height: 400px;
+    }
+    .about__description {
+        font-size: var(--smaller-font-size);
+    }
+
+    .tabs__description span:last-child {
+        display: inline;
+    }
+
+    .section__description {
+        font-size: var(--smaller-font-size);
+    }
+
+    .portfolio__data {
+        inset-inline: 1rem;
+        bottom: 1rem;
+    }
+
+    .contact__img {
+        margin-right: auto;
+    }
+
+    .contact__description {
+        font-size: var(--smaller-font-size);
+    }
+
 }
