--- a/style.css
+++ b/style.css
@@ -874,12 +874,15 @@ input {
     }
 
     .nav__logo {
-        font-size: 18px;
+        font-size: 17px;
     }
 
     .nav__socials {
-        column-gap: 0.85rem;
+        column-gap: 0.75rem;
         margin-left: auto;
+    }
+    .nav__toggle {
+        margin-right: 0.5rem;
     }
 
     .home__img {
