--- a/style.css
+++ b/style.css
@@ -877,6 +877,11 @@ input {
         font-size: 20px;
         margin-left: auto;
     }
+
+    .about__img {
+        width: 340px;
+        height: 430px;
+    }
     
 }
 @media screen and (max-width: 350px) {
